# btp_work

./: README.md
catkin_ws/src/path_traverser/script/: path_explorer.py
catkin_ws/src/pocketsphinx/scripts/: recognizer.py
detector/: CMakeLists.txt  package.xml
detector/src/: .detector.py.swp  bright.py  compare.py  detect_track.py  detector.py  display.py  dominant_color.py  object_color.py  record.py  structural_sim.py  template_unmatch_anomaly.py
path_traverser/: CMakeLists.txt  package.xml
path_traverser/launch/: maze_1_world.launch  simple_room.launch
path_traverser/script/: .path_explorer.py.swp  path_explorer (copy).py  path_explorer.py  path_patrol.py  publish_cmd.py
path_traverser/worlds/: train_world.world  train_world_2.world  train_world_3.world  train_world_4.world
pocketsphinx/launch/: pocketsphinx.launch
pocketsphinx/model_adaption/: arctic20.transcription
pocketsphinx/scripts/: recognizer.py
pocketsphinx/vocab/: voice_cmd.dic  voice_cmd.kwlist  voice_us.dic  voice_us.kwlist
simulation/: CMakeLists.txt  package.xml
simulation/launch/: empty_world.launch  test_world.launch
simulation/models/: README.md  box.urdf
simulation/models/meshes/: box.dae
simulation/models/trial_room/Simple_Room/: model.config  model.sdf
simulation/models/trial_room/Trial_Room/: model.config  model.sdf
simulation/models/turtle_bot_sensors/: README.md  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
simulation/worlds/: README.md  bottle_room.world  empty.world  simple_room.world  turtlebot3_simple_room.launch
