<package>
  <name>burger_sim</name>
  <version>1.0.0</version>
  <description>
		This package contains the launch files that load the required controller interfaces for simulation in Gazebo.
  </description>

  <author email="meetaashay3@gmail.com">Aashay Bhise</author>
  
  <maintainer email="meetaashay3@gmail.com">Aashay Bhise</maintainer>
  <license>BSD</license>
  
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>tdf_control</build_depend> 
  <build_depend>xacro</build_depend>  
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>velocity_controllers</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>tdf_control</run_depend>   
  <run_depend>xacro</run_depend> 
  <run_depend>gazebo_plugins</run_depend> 
  <run_depend>joint_state_controller</run_depend> 
  <run_depend>velocity_controllers</run_depend> 
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models/test_house"/>
  </export>

</package>
